# src-manage

./: Cargo.toml  LICENSE  flake.nix  rustfmt.toml
completions/: completion.fish
src/: args.rs  command_ext.rs  config.rs  main.rs  remote_mount.rs
